// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Modal/ModalFooterOKCancel AnnulerValider smoke-test 1`] = `
<hr class="mt-4">
<div class="flex gap-4 justify-end">
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Annuler
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Valider
      </div>
    </div>
  </button>
</div>
`;

exports[`design-system/Modal/ModalFooterOKCancel CustomLabels smoke-test 1`] = `
<hr class="mt-4">
<div class="flex gap-4 justify-end">
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Dismiss
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        OK
      </div>
    </div>
  </button>
</div>
`;

exports[`design-system/Modal/ModalFooterOKCancel Valider smoke-test 1`] = `
<hr class="mt-4">
<div class="flex gap-4 justify-end">
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Valider
      </div>
    </div>
  </button>
</div>
`;
